# KeySearchApp

./: README-openssl.md  build.gradle  create-openssl-zip.sh  gradle.properties  gradlew  gradlew.bat  settings.gradle
.github/workflows/: android.yml  build.yml  main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/keysearchapp/: MainActivity.kt  NativeCallback.kt  NativeLoader.kt  SearchService.kt  SearchViewModel.kt
app/src/main/java/com/keysearch/app/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: fetch-prebuilt-openssl.sh
